--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <h2></h2>
         </header>
 
-        <section id="downloads" class="clearfix">
-          <a href="https://github.com/Barnickle/barnickle.github.io" id="view-on-github" class="button" center><span>View on GitHub</span></a>
+        <section id="downloads" class="clearfix" center>
+          <a href="https://github.com/Barnickle/barnickle.github.io" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
