--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>A simple Website to start with...</h1>
+          <h1>A Website to start with...</h1>
           <h2></h2>
         </header>
 
