--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <!-- <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" /> -->
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,15 +15,16 @@
 
   <body>
     <div id="container">
-      <div class="inner">
-
+      <div class="inner2"><h1>hoi</h1></div>
+	  <div class="inner">
         <header>
-          <h1>A simple Website to start with...</h1>
+          <h1>A simple Website to start</h1>
           <h2></h2>
         </header>
 
-        <section id="downloads" class="clearfix" center>
+        <section id="downloads" class="clearfix">
           <a href="https://github.com/Barnickle/barnickle.github.io" id="view-on-github" class="button"><span>View on GitHub</span></a>
+		  <a href="test.html" id="view-on-github" class="button"><span>Test Page</span></a>
         </section>
 
         <hr>
