--- a/copy.html
+++ b/copy.html
@@ -8,7 +8,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 	<title>Toga Apartments – Toga Group</title>	<meta name="keywords" content="" />
-<meta name="description" content="The Toga Group is a successful developer of quality residential apartments and a leading hotel operator across Australia, NZ and Europe" />	<link rel="stylesheet" type="text/css" href="/cache/css/ui.app/ui.app.1415320093.css">	<script type="text/javascript" src="/cache/js/ui.modernizr/ui.modernizr.1414631090.js"></script>	<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+	<meta name="description" content="..." />	
+	<link rel="stylesheet" type="text/css" href="/stylesheets/toga.css">
+	<script type="text/javascript" src="/ui.modernizr.1414631090.js"></script>	
+	<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 	<link rel="apple-touch-icon" href="/toga/img/favicon/favicon.png">
 	<link rel="apple-touch-icon" href="/cache/img/toga/img/favicon/favicon.png/w_58-h_58.png" sizes="58x58">
 	<link rel="apple-touch-icon" href="/cache/img/toga/img/favicon/favicon.png/w_72-h_72.png" sizes="72x72">
