--- a/copy.html
+++ b/copy.html
@@ -10,13 +10,8 @@
 	<title>Toga Apartments – Toga Group</title>	<meta name="keywords" content="" />
 	<meta name="description" content="..." />	
 	<link rel="stylesheet" type="text/css" href="/stylesheets/toga.css">
-	<script type="text/javascript" src="/ui.modernizr.1414631090.js"></script>	
+	<script type="text/javascript" src="ui.modernizr.1414631090.js"></script>	
 	<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-	<link rel="apple-touch-icon" href="/toga/img/favicon/favicon.png">
-	<link rel="apple-touch-icon" href="/cache/img/toga/img/favicon/favicon.png/w_58-h_58.png" sizes="58x58">
-	<link rel="apple-touch-icon" href="/cache/img/toga/img/favicon/favicon.png/w_72-h_72.png" sizes="72x72">
-	<link rel="apple-touch-icon" href="/cache/img/toga/img/favicon/favicon.png/w_100-h_100.png" sizes="100x100">
-	<link rel="apple-touch-icon" href="/cache/img/toga/img/favicon/favicon.png/w_144-h_144.png" sizes="144x144">
 
 
 
