--- a/copy.html
+++ b/copy.html
@@ -1,18 +1,9 @@
-
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml addthis: http://www.addthis.com/help/api-spec"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml addthis: http://www.addthis.com/help/api-spec"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml addthis: http://www.addthis.com/help/api-spec"> <![endif]-->
-<!--[if IE 9]>         <html class="no-js lt-ie10" xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml addthis: http://www.addthis.com/help/api-spec"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml addthis: http://www.addthis.com/help/api-spec"> <!--<![endif]-->
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
-	<title>Toga Apartments – Toga Group</title>	<meta name="keywords" content="" />
+	<title>...</title>	<meta name="keywords" content="" />
 	<meta name="description" content="..." />	
 	<link rel="stylesheet" type="text/css" href="/stylesheets/toga.css">
-	<script type="text/javascript" src="ui.modernizr.1414631090.js"></script>	
-	<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-
 
 
 </head>
