--- a/Eleken.html
+++ b/Eleken.html
@@ -3,13 +3,13 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta charset="UTF-8">
 	<title>Eleken</title>
-	<link rel="shortcut icon" href="http://eleken.co/img/eleken_favicon.png">
-	<link rel="stylesheet" href="http://eleken.co/css/font-awesome.min.css">
-	<link rel="stylesheet" href="http://eleken.co/css/animate.css">
-	<link rel="stylesheet" href="http://eleken.co/css/icons.css">
-	<link rel="stylesheet" href="http://eleken.co/css/reset.css">
-	<link rel="stylesheet" href="http://eleken.co/css/font.css">
-	<link rel="stylesheet" href="http://eleken.co/css/style.css">
+	<link rel="shortcut icon" href="/img/eleken_favicon.png">
+	<link rel="stylesheet" href="/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/css/animate.css">
+	<link rel="stylesheet" href="/css/icons.css">
+	<link rel="stylesheet" href="/css/reset.css">
+	<link rel="stylesheet" href="/css/font.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<script async="" src="./Eleken_files/analytics.js"></script><script src="./Eleken_files/jquery-1.10.2.min.js"></script>
 	<script src="./Eleken_files/enquire.js"></script>
 	<script src="./Eleken_files/viewportchecker.js"></script>
