--- a/Eleken.html
+++ b/Eleken.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0027)http://eleken.co/works.html -->
+
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta charset="UTF-8">
 	<title>Eleken</title>
@@ -10,10 +10,10 @@
 	<link rel="stylesheet" href="/css/reset.css">
 	<link rel="stylesheet" href="/css/font.css">
 	<link rel="stylesheet" href="/css/style.css">
-	<script async="" src="./Eleken_files/analytics.js"></script><script src="./Eleken_files/jquery-1.10.2.min.js"></script>
-	<script src="./Eleken_files/enquire.js"></script>
-	<script src="./Eleken_files/viewportchecker.js"></script>
-	<script src="./Eleken_files/animated.js"></script>
+	<script async="" src="/js/analytics.js"></script><script src="./Eleken_files/jquery-1.10.2.min.js"></script>
+	<script src="/js/enquire.js"></script>
+	<script src="/js/viewportchecker.js"></script>
+	<script src="/js/animated.js"></script>
 <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
 .en-markup-crop-options {
     top: 18px !important;
@@ -129,13 +129,12 @@
 						<a href="http://eleken.co/"><img src="./Eleken_files/logo_footer.png" alt=""></a>
 					</div>
 					<div class="pull-left link-share">
-						<a href="https://www.facebook.com/elekendesign">Facebook</a>
 						<a href="https://twitter.com/elekendesign">Twitter</a>
-						<div class="copyright">Copyright © 2014. Eleken</div>
+						<div class="copyright"></div>
 					</div>
 					<div class="pull-right">
 						<div class="link">Got an interesting project?</div>
-						<a href="mailto:work@eleken.co" class="btn btn-transparent">Let’s work together<span class="icon-arrow"></span></a>
+						<a class="btn btn-transparent">Let’s wasdfasdfa asdfa sd ork together<span class="icon-arrow"></span></a>
 					</div>
 					<div class="clear"></div>
 				</div>
@@ -143,13 +142,7 @@
 		</footer>
 	</div>
 	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-		ga('create', 'UA-56303822-1', 'auto');
-		ga('send', 'pageview');
 	</script>
 
 <div id="feedly-mini" title="feedly Mini tookit"></div></body></html>
