--- a/Eleken.html
+++ b/Eleken.html
@@ -134,7 +134,7 @@
 					</div>
 					<div class="pull-right">
 						<div class="link">Got an interesting project?</div>
-						<a class="btn btn-transparent">Let’s wasdfasdfa asdfa sd ork together<span class="icon-arrow"></span></a>
+						<a class="btn btn-transparent">Let’s a asdfa sd ork together<span class="icon-arrow"></span></a>
 					</div>
 					<div class="clear"></div>
 				</div>
