--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
 	<div id="container" class="inner">
 		<div id="green">
 			<div id="red1">
-				<p> test </p>
+				test
 			</div>
 			<div id="red2">
 				<p> test </p>
