--- a/buttons.html
+++ b/buttons.html
@@ -9,24 +9,12 @@
 	</head>
 	<body>
 
-	<!-- a simple div with some links -->
-		<div class="breadcrumb">
-			<a href="#" class="active">Browse</a>
-			<a href="#">Compare</a>
-			<a href="#">Order Confirmation</a>
-			<a href="#">Checkout</a>
-		</div>
-		<br /><br />
-		<!-- another version - flat style with animated hover effect -->
 		<div class="breadcrumb flat">
-			<a href="#" class="active">Browse</a>
-			<a href="#">Compare</a>
-			<a href="#">Order Confirmation</a>
-			<a href="#">Checkout</a>
+			<a href="#" class="active">Ein Button</a>
+			<a href="#">ein Buffon</a>
+			<a href="#">Nein kein Goalie</a>
+			<a href="#">Wo?</a>
 		</div>
-
-<!-- Prefixfree -->
-<script src="http://thecodeplayer.com/uploads/js/prefixfree-1.0.7.js" type="text/javascript" type="text/javascript"></script>
 	
 	</body>
 </html>
